# pmlrpy

./: README.md  pyproject.toml
.github/workflows/: tests.yml
src/pmlrpy/: __init__.py  cli.py  core.py
test/: test-entries.bib  test_pmlrpy.py
