[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pmlrpy"
version = "0.1.0"
description = "A tool to validate and fix BibTeX files according to PMLR specifications"
authors = ["Series Editor <proceedings@mlr.press>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/mlresearch/pmlrpy"
documentation = "https://github.com/mlresearch/pmlrpy#readme"
packages = [
    { include = "pmlrpy", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
bibtexparser = "^1.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0"
isort = "^5.0"
mypy = "^1.0"
ruff = "^0.1.0"

[tool.poetry.scripts]
pmlrpy = "pmlrpy.cli:main"
test = "pytest:main"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
addopts = "-v"